--- a/src/02-todo-list-storage.html
+++ b/src/02-todo-list-storage.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>javascript-lesson-16-module-8</title>
+    <title>Todo-List-Storage</title>
     <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="css/01-todo-list.css" />
   </head>
   <body>
-    <h1>javascript-lesson-16-module-8</h1>
-    <ul>
-      <li><a href="01-todo-list.html">Todo-list</a></li>
-      <li>
-        <a href="02-todo-list-storage.html">Todo-list (with local storage)</a>
-      </li>
-    </ul>
+    <p><a href="index.html">Go back</a></p>
+
+    <!-- aici -->
+
+    <script src="js/02-todo-list-storage.js" type="module"></script>
   </body>
 </html>
