--- a/src/02-todo-list-storage.html
+++ b/src/02-todo-list-storage.html
@@ -11,7 +11,20 @@
   <body>
     <p><a href="index.html">Go back</a></p>
 
-    <!-- aici -->
+    <div id="myDIV" class="header">
+      <h2 style="margin: 5px">My To Do List</h2>
+      <input type="text" id="myInput" placeholder="Title..." />
+      <span class="addBtn" id="addBtn">Add</span>
+    </div>
+
+    <ul id="myUL">
+      <!-- <li>Hit the gym</li>
+      <li class="checked">Pay bills</li>
+      <li>Meet George</li>
+      <li>Buy eggs</li>
+      <li>Read a book</li>
+      <li>Organize office</li> -->
+    </ul>
 
     <script src="js/02-todo-list-storage.js" type="module"></script>
   </body>
