javascript-lesson-16-module-8
javascript-lesson-16-module-8

--- a/src/01-todo-list.html
+++ b/src/01-todo-list.html
@@ -17,14 +17,7 @@
       <span class="addBtn" id="addBtn">Add</span>
     </div>
 
-    <ul id="myUL">
-      <!-- <li>Hit the gym</li>
-      <li class="checked">Pay bills</li>
-      <li>Meet George</li>
-      <li>Buy eggs</li>
-      <li>Read a book</li>
-      <li>Organize office</li> -->
-    </ul>
+    <ul id="myUL"></ul>
 
     <script src="js/01-todo-list.js" type="module"></script>
   </body>
